# cmaketest1

./: test1.code-workspace
Ensor/Communicator/: CMakeLists.txt
Ensor/Communicator/_install/include/: communicator.h
Ensor/Communicator/src/Communicator/: communicator.cpp  communicator.h
Ensor/PrintManager/: CMakeLists.txt
Ensor/PrintManager/_install/include/: printmanager.h
Ensor/PrintManager/src/PrintManager/: printmanager.cpp  printmanager.h
EnsorApplication/Castor/: CMakeLists.txt
EnsorApplication/Castor/src/Castor/: castor.cpp  castor.h  program.cpp
